--- a/index.htmll/css/style.css
+++ b/index.htmll/css/style.css
@@ -1,12 +1,26 @@
 body {
-  background-color: #fbf9f4
+  background-color: #ffffff
  !important;
 }
 
 h1 {
-  color: #e9d3cd
+  color: #203c7a
 }
 
+
 h2 {
-  color: #eeded9
+  color: #91a1c3
+}
+
+
+h3 {
+  color: #91a1c3
+}
+
+li {
+  color: #244388
+}
+
+p {
+  color: #395593
 }
